...
import com.guang.cloudx.logic.model.displayName
import java.util.Locale

fun downloadTaskStatusText(item: DownloadItemUi): String =
    when (item.status) {
        TaskStatus.QUEUED -> {
            "排队中"
        }

        TaskStatus.PAUSING -> {
            "正在暂停…"
        }

...
